--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -44,7 +44,8 @@ j2ee.server.type=gfv3ee6
 jar.compress=false
 javac.classpath=\
     ${libs.hibernate4-support.classpath}:\
-    ${libs.PrimeFaces_6.1.classpath}
+    ${libs.PrimeFaces_6.1.classpath}:\
+    ${libs.MySQLDriver.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
